--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pyrogram = "^2.0.106"
 tgcrypto = "^1.2.5"
 sqlalchemy = "^2.0.28"
 python-dotenv = "^1.0.1"
+alembic = "^1.13.1"
 
 
 [tool.poetry.group.dev.dependencies]
