Add pydantic settings, update models

--- a/example.env
+++ b/example.env
@@ -1,5 +1,10 @@
 # database connection URI, default is SQLite
 DB_URI=sqlite:///database.db
 
-# log settings file path
+# telegram tokens
+API_ID=
+API_HASH=
+BOT_TOKEN=
+
+# log settings file (TOML) path
 LOG_SETTINGS_FILE=./settings.toml
