Add /sudo command

--- a/example.env
+++ b/example.env
@@ -8,3 +8,12 @@ BOT_TOKEN=
 
 # log settings file (TOML) path
 LOG_SETTINGS_FILE=./settings.toml
+
+# cache directory
+CACHE_DIR=./.cache
+
+# bot persistence
+PERSIST_FILE=./.bot_data
+
+# superuser token (minimum length 30)
+SU_TOKEN=
