--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ tgcrypto = "^1.2.5"
 sqlalchemy = "^2.0.28"
 alembic = "^1.13.1"
 pydantic-settings = "^2.2.1"
-python-telegram-bot = "^21.0.1"
+python-telegram-bot = {extras = ["job-queue"], version = "^21.0.1"}
 
 
 [tool.poetry.group.dev.dependencies]
